# wp-plugin-updater

./: LICENSE  README.md  pyproject.toml
src/wp_plugin_updater/: __init__.py  cli.py  composer.py  git_utils.py  license_api.py  merge.py  version.py  wordpress.py
