[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wp-plugin-updater"
version = "0.1.0"
description = "Utilities for automating WordPress plugin and theme updates"
authors = [{name = "Jordan Parker"}]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
]

[project.scripts]
wp-plugin = "wp_plugin_updater.cli:main"
